Fixed Sign Up input height on IE

--- a/css/landio.css
+++ b/css/landio.css
@@ -4880,9 +4880,6 @@ figure {
 .form-group {
   margin-bottom: 1.875rem; }
 
-.form-control:-webkit-autofill {
-  background-color: #fff; }
-
 .has-icon-left {
   position: relative; }
   .has-icon-left:before {
@@ -4924,7 +4921,8 @@ figure {
     color: #6c59b4; }
 
 .form-control-lg {
-  font-size: 1rem; }
+  font-size: 1rem;
+  height: 60px; }
 
 .btn-block {
   padding-right: 0;
